...

      <View className="p-4">
        <Checkbox
          label="Don't show this card again"
          checked={false}
          onChange={onDismiss}
          testID="bids.while-you-wait.dismiss"
        />
      </View>
    </Card>
  );
}

